[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-tutorials"
version = "2.0.0"
description = "LangGraph 1.1.9 Tutorial Series — From Fundamentals to Production"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.9",
    "langgraph-prebuilt>=1.0.11",
    "langchain>=1.2.15",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-supervisor>=0.0.31",
    "langgraph-swarm>=0.1.0",
    "langmem>=0.0.30",
    "langgraph-cli>=0.4.24",
    "langgraph-sdk>=0.3.13",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "playwright>=1.59.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
